--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -9,6 +9,9 @@
     "wdth" 100;
 }
 /* shared style */
+.secondary-bg{
+    background-color: #FFF8F3;
+}
 .text-primary{
     color: #FD6E0A;
 }
@@ -24,8 +27,19 @@
     font-size: 20px;
     border: none;
     border-radius: 5px;
-    /* padding: 18px 35px 19px 36px; */
 }
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: black;
+    text-align: center;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
+    text-align: center;
+}
+
 /* Header */
 .header{
     background-image: url('../images/developer.png'), url('../images/header_bg.png');
@@ -78,4 +92,17 @@ nav ul{
 }
 .banner-profile{
     width: 580px;
+}
+/*Main style */
+.main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* About style */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
 }
